--- a/frontend/MemoMedia/package.json
+++ b/frontend/MemoMedia/package.json
@@ -19,7 +19,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroller": "^1.2.6",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "react-router": "^6.20.0",
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
